# DeepMergeFrontEnd

./: .env  BACKEND_INTEGRATION_CONFIRMATION.md  DEEP_MERGE_INTEGRATION.md  Dockerfile.frontend  README.md  bun.lockb  docker-compose.yaml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
DeepMerge/: DEVELOPER_GUIDE.md  Dockerfile  Makefile  README.md  ROADMAP.md  alembic.ini  docker-compose.yaml  occurrence.csv  pyproject.toml  test_endpoints.py
DeepMerge/alembic/versions/: 0001_enable_extensions.py  0002_timescale_hypertables.py
DeepMerge/app/: main.py
DeepMerge/app/analytics/: engine.py
DeepMerge/app/core/: logging.py  metrics.py  settings.py
DeepMerge/app/db/: base.py  session.py
DeepMerge/app/ingestion/: cmfri.py  ibp.py  incois.py  ncbi.py
DeepMerge/app/models/: biodiversity.py  fisheries.py  molecular.py  oceanography.py
DeepMerge/app/routers/: __init__.py  ai.py  analytics.py  auth.py  biodiversity.py  fisheries.py  graphql.py  molecular.py  oceanography.py  standards.py  visualization.py  websocket.py
DeepMerge/app/schemas/: biodiversity.py  fisheries.py  molecular.py  oceanography.py
DeepMerge/app/services/: standards.py
DeepMerge/app/services/ingestion/: kafka.py
DeepMerge/app/services/llm/: gemini.py  query_processor.py  xarray_grid.py
DeepMerge/app/services/molecular/: blast.py  pipeline.py
public/: site.webmanifest  sitemap.xml
src/: App.tsx  index.css
src/assets/: Thumbs.db
src/lib/: api.ts  gemini-api.ts  utils.ts
src/pages/: Analytics.tsx  Chat.tsx  DataExplorer.tsx  Global.tsx  Index.tsx  (+6 more)
(+10 files in other folders)
